--- a/docs/inst/rmarkdown/templates/govuk/skeleton/skeleton.Rmd
+++ b/docs/inst/rmarkdown/templates/govuk/skeleton/skeleton.Rmd
@@ -3,7 +3,7 @@ title: "GOV.UK-style R Markdown Document"
 author: ""
 date: ""
 output:
-  govdown::govuk_document
+  govdown::govdown_document
 ---
 
 ## Header level 1 (not a title)
