--- a/index.Rmd
+++ b/index.Rmd
@@ -27,18 +27,18 @@ a markdown document (a plain text file with the suffix `.Rmd` or `.md` instead
 of `.txt`), and put something called 'YAML metadata' at the top.  It should look
 like this:
 
-```md
----
-title: On Nectar
-author: Buzzy Bee
-date: March 27, 2019
-output:
-  govdown::govdown_document:
-    font: "sans-serif"
----
+    ---
+    title: Statistics about statistics
+    author: Joe Bloggs
+    date: March 27, 2019
+    output:
+      govdown::govdown_document:
+        font: "sans-serif"
+    ---
 
-Thiz pozt sayz what'z tazty about nectar.
-```
+    This is a study of official statistics in the UK.
+
+<p/>
 
 To render that file to HTML, run `rmarkdown::render("filename.Rmd")` in the
 console, or click the 'knit' button in RStudio.
