--- a/tech-docs.Rmd
+++ b/tech-docs.Rmd
@@ -1,7 +1,7 @@
 # Technical Documentation
 
 ::: {.lead-para}
-This page explains the design and implementation of Govdown.
+This page explains the design and implementation of [Govdown](./index.html).
 :::
 
 ## Design
