--- a/site/index.Rmd
+++ b/site/index.Rmd
@@ -33,7 +33,8 @@ You can install the released version of govdown from
 install.packages("govdown")
 ```
 
-And the development version from [GitHub](https://github.com/) with:
+And the development version from
+[GitHub](https://github.com/ukgovdatascience/govdown) with:
 
 ```r
 # install.packages("devtools") # if devtools is not already installed
