--- a/site/index.Rmd
+++ b/site/index.Rmd
@@ -483,7 +483,7 @@ print("This code will not be evaluated")
 ```{r}
 print("This code will be evaluated")
 ```
-Create code chunks that are not to be evaluated as follows.
+Create code chunks that are not to be evaluated using a plain markdown R code chunk as follows.
 
 ```md
     ```r
