--- a/tests/testthat/site/index.Rmd
+++ b/tests/testthat/site/index.Rmd
@@ -50,7 +50,7 @@ output:
     font: "sans-serif" # (default) or "new-transport"
     favicon: "custom" # or "none" (default) or "govuk" see ?govdown_document
     logo: "images/logo.svg" # or false (default)
-    logo_url: "https://ukgovdatascience.github.io/govdown"
+    logo_url: "https://ukgovdatascience.github.io/govdown/"
     logo_text: "logo_text"
     page_title: "page_title"
     title: "title"
@@ -89,7 +89,7 @@ output:
     font: "sans-serif" # (default) or "new-transport"
     favicon: "custom" # or "none" (default) or "govuk" see ?govdown_document
     logo: "images/logo.svg" # or false (default)
-    logo_url: "https://ukgovdatascience.github.io/govdown"
+    logo_url: "https://ukgovdatascience.github.io/govdown/"
     logo_text: "logo_text"
     page_title: "page_title"
     title: "title"
